--- a/index.html
+++ b/index.html
@@ -1,12 +1,109 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>1st Semester</title>
+ <!-- my css -->
+ <link rel="stylesheet" href="css/components.css">
+ <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
- 
+ <nav class="main-nav" id="main-nav">
+  <h2 class="primary-text">Índice</h2>
+  <div class="links">
+   <a href="#section1" class="nav-link">Introducción</a>
+   <a href="#section1" class="nav-link">Reticula</a>
+   <a href="#section1" class="nav-link first-group">Primer Semestre</a>
+   <a href="#section1" class="nav-link second-group">Taller de Ética</a>
+   <a href="#section1" class="nav-link second-group">Investigación</a>
+   <a href="#section1" class="nav-link second-group">Matemáticas Discretas</a>
+   <a href="#section1" class="nav-link second-group">Programación</a>
+   <a href="#section1" class="nav-link second-group">Cálculo Diferencial</a>
+   <a href="#section1" class="nav-link second-group">Administración</a>
+   <a href="#section1" class="nav-link">Inicio</a>
+   <a href="#section1" class="nav-link">Inicio</a>
+   <a href="#section1" class="nav-link">Inicio</a>
+  </div>
+ </nav>
+ <main>
+  <section id="section1" class="section home">
+   <!-- <h2 class="primary-text">Materias Principales</h2> -->
+   <div class="carrousel-container">
+    <div class="carrousel">
+     <div class="is-active carrousel-card">
+      <div class="text_slide">
+       <span class="secondary-text">Ética</span>
+       <a class="cta" href="">Ver más</a>
+      </div>
+      <img loading="lazy" src="assets/img/etica_slide.webp" alt="Ética" title="Ética">
+     </div>
+     <div class="carrousel-card">
+      <div class="text_slide">
+       <span class="secondary-text">Investigación</span>
+       <a class="cta" href="">Ver más</a>
+      </div>
+      <img loading="lazy" src="assets/img/investigation_slide.jpg" alt="Investigación" title="Investigación">
+     </div>
+     <div class="carrousel-card">
+      <div class="text_slide">
+       <span class="secondary-text">Matemáticas discretas</span>
+       <a class="cta" href="">Ver más</a>
+      </div>
+      <img loading="lazy" src="assets/img/math_slide.jpg" alt="Matemáticas discretas" title="Matemáticas discretas">
+     </div>
+     <div class="carrousel-card">
+      <div class="text_slide">
+       <span class="secondary-text">Programación</span>
+       <a class="cta" href="">Ver más</a>
+      </div>
+      <img loading="lazy" src="assets/img/programacion_slide.jpg" alt="Cálculo Diferencial" title="Programación">
+     </div>
+     <div class="carrousel-card">
+      <div class="text_slide">
+       <span class="secondary-text">Cálculo Diferencial</span>
+       <a class="cta" href="">Ver más</a>
+      </div>
+      <img loading="lazy" src="assets/img/calculus_slide.jpg" alt="Cálculo Diferencial" title="Cálculo Diferencial">
+     </div>
+     <div class="carrousel-card">
+      <div class="text_slide">
+       <span class="secondary-text">Administración</span>
+       <a class="cta" href="">Ver más</a>
+      </div>
+      <img loading="lazy" src="assets/img/taller_administracion_slide.jpg" alt="Administración" title="Administraciónl">
+     </div>
+    </div>
+    <div class="buttons_slide">
+     <button id="prev" class="btn hidden"><</button>
+     <button id="next" class="btn">></button>
+    </div>
+   </div>
+  </section>
+  <section class="section" id="section2"></section>
+  <section class="section" id="section3"></section>
+  <section class="section" id="section4"></section>
+  <section class="section" id="section5"></section>
+  <section class="section" id="section6"></section>
+  <section class="section" id="section7"></section>
+  <section class="section" id="section8"></section>
+  <section class="section" id="section9"></section>
+  <section class="section" id="section10"></section>
+  <section class="section" id="section11"></section>
+  <section class="section" id="section12"></section>
+  <section class="section" id="section13"></section>
+  <section class="section" id="section14"></section>
+  <section class="section" id="section15"></section>
+  <section class="section" id="section16"></section>
+  <section class="section" id="section17"></section>
+  <section class="section" id="section18"></section>
+  <section class="section" id="section19"></section>
+  <section class="section" id="section20"></section>
+ </main>
+<script src="index.js" type="module"></script>
 </body>
+
 </html>
