--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Primer Semestre</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 </head>
+
 <body>
-  <h1>Hola mundo</h1>
+  <header class="header">
+    <div class="container">
+      <figure class="flex-center">
+        <i class="far fa-sticky-note"></i>
+        <span>Mis Notas</span>
+      </figure>
+      <h2><a href="https://github.com/carlosupreme" target="_blank" rel="noopener">@carlosuprem</a></h2>
+    </div>
+  </header>
 </body>
+
 </html>
