--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
       <h2><a href="https://github.com/carlosupreme" target="_blank" rel="noopener">@carlosuprem</a></h2>
     </div>
   </header>
+  <section class="container">
+    <div class="carousel-container">
+      <div class="carousel">
+        <div class="slide"><img src="assets/img/fedra.webp" alt=""></div>
+        <div class="slide"><img src="assets/img/la_muerte_de_socrates.webp" alt=""></div>
+        <div class="slide"><img src="assets/img/el_angel_caido.webp" alt=""></div>
+        <div class="slide"><img src="assets/img/la_escuela_de_atenas.webp" alt=""></div>
+        <div class="slide"><img src="assets/img/la_persistencia_del_tiempo.webp" alt=""></div>
+        <div class="slide"><img src="assets/img/la_tentacion_de_san_antonio.webp" alt=""></div>
+      </div>
+      <div class="carousel-buttons">
+        <button id="carousel-prev" class="btn fas fa-chevron-left"></button>
+        <button id="carousel-next" class="btn fas fa-chevron-right"></button>
+      </div>
+    </div>
+  </section>
+  <script src="index.js" type="module"></script>
 </body>
 
 </html>
