--- a/index.html
+++ b/index.html
@@ -20,15 +20,34 @@
       <h2><a href="https://github.com/carlosupreme" target="_blank" rel="noopener">@carlosuprem</a></h2>
     </div>
   </header>
+  <!-- carousel -->
   <section class="container">
     <div class="carousel-container">
       <div class="carousel">
-        <div class="slide"><img src="assets/img/fedra.webp" alt=""></div>
-        <div class="slide"><img src="assets/img/la_muerte_de_socrates.webp" alt=""></div>
-        <div class="slide"><img src="assets/img/el_angel_caido.webp" alt=""></div>
-        <div class="slide"><img src="assets/img/la_escuela_de_atenas.webp" alt=""></div>
-        <div class="slide"><img src="assets/img/la_persistencia_del_tiempo.webp" alt=""></div>
-        <div class="slide"><img src="assets/img/la_tentacion_de_san_antonio.webp" alt=""></div>
+        <div class="slide">
+          <img src="assets/img/fedra.webp" alt="">
+         <div class="text"><h2>Materia name</h2> <button class="btn">Ver</button></div>
+        </div>
+        <div class="slide">
+          <img src="assets/img/la_muerte_de_socrates.webp" alt="">
+         <div class="text"><h2>Materia name</h2> <button class="btn">Ver</button></div>
+        </div>
+        <div class="slide">
+          <img src="assets/img/el_angel_caido.webp" alt="">
+         <div class="text"><h2>Materia name</h2> <button class="btn">Ver</button></div>
+        </div>
+        <div class="slide">
+          <img src="assets/img/la_escuela_de_atenas.webp" alt="">
+         <div class="text"><h2>Materia name</h2> <button class="btn">Ver</button></div>
+        </div>
+        <div class="slide">
+          <img src="assets/img/la_persistencia_del_tiempo.webp" alt="">
+         <div class="text"><h2>Materia name</h2> <button class="btn">Ver</button></div>
+        </div>
+        <div class="slide">
+          <img src="assets/img/la_tentacion_de_san_antonio.webp" alt="">
+         <div class="text"><h2>Materia name</h2> <button class="btn">Ver</button></div>
+        </div>
       </div>
       <div class="carousel-buttons">
         <button id="carousel-prev" class="btn fas fa-chevron-left"></button>
@@ -36,6 +55,8 @@
       </div>
     </div>
   </section>
+  <!--  -->
+
   <script src="index.js" type="module"></script>
 </body>
 
