imagenes dinamicas carousel

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="header">
     <div class="container">
       <figure class="flex-center">
-        <i class="far fa-sticky-note"></i>
+        <i class="icon-sticky-note-o"></i>
         <strong>Mis Notas</strong>
       </figure>
       <h2><a href="https://github.com/carlosupreme" target="_blank" rel="noopener">@carlosuprem</a></h2>
@@ -26,37 +26,37 @@
     <div class="carousel-container">
       <div class="carousel">
         <div class="slide">
-          <img loading="lazy" src="./img/code.jpg" alt="">
+          <img loading="lazy">
           <div class="abs-center flex-center">
             <h2>Programación</h2> 
           </div>
         </div>
         <div class="slide">
-          <img loading="lazy" src="./img/matematicas.jfif" alt="">
+          <img loading="lazy">
           <div class="abs-center flex-center">
             <h2 class="txt-center">Matemáticas <br>Discretas</h2> 
           </div>
         </div>
         <div class="slide">
-          <img loading="lazy" src="./img/calculo.jfif" alt="">
+          <img loading="lazy">
           <div class="abs-center flex-center">
             <h2 class="txt-center">Cálculo<br>Diferencial</h2> 
           </div>
         </div>
         <div class="slide">
-          <img loading="lazy" src="./img/inv.jpg" alt="">
+          <img loading="lazy">
           <div class="abs-center flex-center">
             <h2>Investigación</h2> 
           </div>
         </div>
         <div class="slide">
-          <img loading="lazy" src="./img/admin.jpg" alt="">
+          <img loading="lazy">
           <div class="abs-center flex-center">
             <h2>Administración</h2>
           </div>
         </div>
         <div class="slide">
-          <img loading="lazy" src="./img/la_muerte_de_socrates.jpg" alt="">
+          <img loading="lazy">
           <div class="abs-center flex-center">
             <h2>Ética</h2>
           </div>
@@ -68,8 +68,13 @@
       </div>
     </div>
   </section>
-  <!--  -->
-
+  <!-- introduccion -->
+  <section class="container">
+    <h2 class="title">Introducción</h2>
+    <article class="article">
+      <p>En este blog subiré todos mis apuntes del primer semestre de la carrera Ingenieria en Sistemas Computacionales</p>
+    </article>
+  </section>
   <script src="index.js" type="module"></script>
 </body>
 
