añadiendo responsive con js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <title>Primer Semestre</title>
   <link rel="stylesheet" href="./index.css">
   <link rel="stylesheet" href="./icons/style.css">
-  <meta name="description" content="Blog donde encontrarás los apuntes del primer semestre de Ingenieria en Sistemas Computacionales">
+  <meta name="description"
+    content="Blog donde encontrarás los apuntes del primer semestre de Ingenieria en Sistemas Computacionales">
 </head>
 
 <body>
@@ -28,25 +29,25 @@
         <div class="slide">
           <img loading="lazy">
           <div class="abs-center flex-center">
-            <h2>Programación</h2> 
+            <h2>Programación</h2>
           </div>
         </div>
         <div class="slide">
           <img loading="lazy">
           <div class="abs-center flex-center">
-            <h2 class="txt-center">Matemáticas <br>Discretas</h2> 
+            <h2 class="txt-center">Matemáticas <br>Discretas</h2>
           </div>
         </div>
         <div class="slide">
           <img loading="lazy">
           <div class="abs-center flex-center">
-            <h2 class="txt-center">Cálculo<br>Diferencial</h2> 
+            <h2 class="txt-center">Cálculo<br>Diferencial</h2>
           </div>
         </div>
         <div class="slide">
           <img loading="lazy">
           <div class="abs-center flex-center">
-            <h2>Investigación</h2> 
+            <h2>Investigación</h2>
           </div>
         </div>
         <div class="slide">
@@ -64,15 +65,31 @@
       </div>
       <div class="carousel-buttons abs-center">
         <button aria-label="Ir a la anterior diapositiva" id="carousel-prev" class="btn icon-angle-left"></button>
-        <button aria-label="Ir a la siguiente diapositiva"  id="carousel-next" class="btn icon-angle-right"></button>
+        <button aria-label="Ir a la siguiente diapositiva" id="carousel-next" class="btn icon-angle-right"></button>
       </div>
     </div>
   </section>
   <!-- introduccion -->
   <section class="container">
     <h2 class="title">Introducción</h2>
-    <article class="article">
-      <p>En este blog subiré todos mis apuntes del primer semestre de la carrera Ingenieria en Sistemas Computacionales</p>
+    <article class="article grid">
+      <div class="left">
+        <p>
+          En este blog subiré todos mis apuntes del primer semestre de la carrera Ingenieria en Sistemas Computacionales.
+          En el Tecnológico Nacional de México Campus Oaxaca.
+          <a href="https://www.tecnm.mx/dir_escolares/reticulas/Reticula%20Ingenieria%20en%20Sistemas%20Computacionales.pdf"
+          target="_blank" rel="noopener"> <i class="icon-file-pdf-o"></i>  Ver Reticula</a> <br>
+          Soy Carlos Sosa y bienvenido a <i><strong>mis notas</strong></i>
+        </p>
+      </div>
+      <div class="right ">
+          <img src="/img/la_muerte_de_socrates.jpg" alt="">
+        <div class="social-media">
+          <a href="https://www.youtube.com" target="_blank" class="icon-facebook"></a>
+          <a href="https://www.youtube.com" target="_blank" class="icon-github"></a>
+          <a href="https://www.youtube.com" target="_blank" class="icon-youtube-play"></a>
+        </div>
+      </div>
     </article>
   </section>
   <script src="index.js" type="module"></script>
