--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
 
       <div class="social">
-        <img src="/img/hashirama.jpg" alt="">
+        <img src="./img/hashirama.jpg" alt="">
         <div class="icons">
           <a href="https://www.youtube.com" target="_blank" class="icon-facebook"></a>
           <a href="https://www.youtube.com" target="_blank" class="icon-github"></a>
