icon and th,eme

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>Primer Semestre</title>
   <link rel="stylesheet" href="./index.css">
   <link rel="stylesheet" href="./icons/style.css">
+  <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon">
+  <meta name="theme" content="#111">
   <meta name="description"
     content="Blog donde encontrarás los apuntes del primer semestre de Ingenieria en Sistemas Computacionales">
 </head>
@@ -81,7 +83,7 @@
           En el Tecnológico Nacional de México Campus Oaxaca.
           <a href="https://www.tecnm.mx/dir_escolares/reticulas/Reticula%20Ingenieria%20en%20Sistemas%20Computacionales.pdf"
             target="_blank" rel="noopener"> <i class="icon-file-pdf-o"></i> Ver Reticula</a><br><br>
-          Este sitio está hecho completamente con codigo puro <br>
+          Este sitio está hecho completamente con codigo puro.<br>
         </p>
         <div class="progress">
           <p><b>HTML</b><b>90%</b></p>
@@ -98,7 +100,7 @@
       </div>
 
       <div class="social">
-        <img src="./img/hashirama.jpg" alt="">
+        <img src="./img/hashirama.jpg" alt="me" title="Me">
         <div class="icons">
           <a href="https://www.youtube.com" target="_blank" class="icon-facebook"></a>
           <a href="https://www.youtube.com" target="_blank" class="icon-github"></a>
