--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./index.css">
   <link rel="stylesheet" href="./icons/style.css">
   <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon">
-  <meta name="theme" content="#111">
+  <meta name="theme-color" content="#222">
   <meta name="description"
     content="Blog donde encontrarás los apuntes del primer semestre de Ingenieria en Sistemas Computacionales">
 </head>
@@ -21,7 +21,7 @@
         <i class="icon-sticky-note-o"></i>
         <strong>Mis Notas</strong>
       </figure>
-      <h2><a href="https://github.com/carlosupreme" target="_blank" rel="noopener">@carlosuprem</a></h2>
+      <h3><a href="https://github.com/carlosupreme" target="_blank" rel="noopener">@carlosuprem</a></h3>
     </div>
   </header>
   <!-- carousel -->
