--- a/html/404.html
+++ b/html/404.html
@@ -6,10 +6,10 @@
 <br>
 <p>Ir a alguna materia
 
-  <a class="block" href="#/Matematicas">Matemáticas</a>
-  <a class="block" href="#/Programacion">Programacion</a>
-  <a class="block" href="#/Calculo">Calculo</a>
-  <a class="block" href="#/Etica">Etica</a>
-  <a class="block" href="#/Administracion">Administracion</a>
-  <a class="block" href="#/Investigacion">Investigacion</a>
+  <a class="block" href="../index.html#/Matematicas">Matemáticas</a>
+  <a class="block" href="../index.html#/Programacion">Programacion</a>
+  <a class="block" href="../index.html#/Calculo">Calculo</a>
+  <a class="block" href="../index.html#/Etica">Etica</a>
+  <a class="block" href="../index.html#/Administracion">Administracion</a>
+  <a class="block" href="../index.html#/Investigacion">Investigacion</a>
 </p>
