--- a/html/calculo.html
+++ b/html/calculo.html
@@ -1,2 +1,13 @@
 <h2>Calculo</h2>
 <h3>Derivadas</h3>
+
+<h1 class="s-4">Limites</h1>
+<p class="s--2">Step -2
+
+</p>
+<p class="s--1">Step -1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum tenetur aliquam quasi, a ducimus dolore. Eligendi excepturi architecto ex illo minima facilis, quod commodi possimus vel laudantium consectetur fugiat perferendis voluptate dolorem consequuntur reprehenderit iure nihil minus? Dignissimos, omnis cupiditate fugit at velit doloremque, voluptate inventore quo quia sed eos.</p>
+<p class="s-0">Step 0 Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident doloribus unde obcaecati. Ipsum blanditiis eligendi odit nostrum repellat numquam in! Saepe, laudantium omnis enim perspiciatis aspernatur similique ut, est repudiandae voluptas hic iure tempore beatae illum? Dignissimos quidem dolorem hic ex voluptatem dolore dolor et reprehenderit. Eius voluptatem aspernatur, officia nisi quae sed debitis minima quas, deserunt, doloribus hic officiis inventore voluptatibus. Ab magnam dolores nobis perferendis nulla omnis nemo exercitationem veniam? Aspernatur, ab quos autem voluptates cupiditate amet maxime itaque veritatis dicta iusto excepturi quo delectus voluptatibus quas vel. Harum inventore quo sapiente necessitatibus obcaecati quam mollitia suscipit. Velit?</p>
+<p class="s-1">Step 1</p>
+<p class="s-2">Step 2</p>
+<p class="s-3">Step 3</p>
+<p class="s-4">Step 4</p>
