--- a/html/mate.html
+++ b/html/mate.html
@@ -1,26 +1,69 @@
 <div class="content" id="/Matematicas">
-  <div class="tag">
-    
-  </div>
+  <article class="article s--1">
+    <div
+      data-style="tag"
+      data-unidad="1"
+      data-stars="2"
+      data-name="Sistemas numericos"
+      data-es="Sistemas numericos"
+      data-en="Numerics Systems" 
+      id="/Matematicas/unidad-1"
+    ></div>
+    <img src="../img/binary.jpg"   class="float-r">
+    <div data-page="1" data-unidad="1" data-materia="matematicas" ></div>
+    <a href="./html/404.html">Continuar leyendo...</a>
+  </article>
+  <hr>
   <article class="article">
-    <h2 id="/Matematicas/unidad-1" class="mb-2 title">Sistemas numéricos</h2>
+    <div
+      data-style="tag"
+      data-unidad="2"
+      data-stars="3"
+      data-name="Conjuntos y relaciones"
+      id="/Matematicas/unidad-2"
+    ></div>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+      veritatis animi facilis repellat saepe velit voluptatum. Totam saepe
+      quibusdam, distinctio natus ullam sed veritatis consequatur sapiente
+      velit, fuga, ipsa inventore?
+    </p>
   </article>
   <article class="article">
-    <h2 id="/Matematicas/unidad-2" class="mb-2 title">
-      Conjuntos y relaciones
-    </h2>
+    <div
+      data-style="tag"
+      data-unidad="3"
+      data-stars="4"
+      data-name="Logica matematica"
+      id="/Matematicas/unidad-3"
+    ></div>
   </article>
   <article class="article">
-    <h2 id="/Matematicas/unidad-3" class="mb-2 title">Logica matematica</h2>
+    <div
+      data-style="tag"
+      data-unidad="4"
+      data-stars="5"
+      data-name="Algebra booleana"
+      id="/Matematicas/unidad-4"
+    ></div>
   </article>
   <article class="article">
-    <h2 id="/Matematicas/unidad-4" class="mb-2 title">Algebra booleana</h2>
+    <div
+      data-style="tag"
+      data-unidad="5"
+      data-stars="5"
+      data-name="Teoria de grafos"
+      id="/Matematicas/unidad-5"
+    ></div>
   </article>
   <article class="article">
-    <h2 id="/Matematicas/unidad-5" class="mb-2 title">Arboles y redes</h2>
-  </article>
-  <article class="article">
-    <h2 id="/Matematicas/unidad-6" class="mb-2 title">Sistemas numéricos</h2>
+    <div
+      data-style="tag"
+      data-unidad="6"
+      data-stars="1"
+      data-name="Arboles y redes"
+      id="/Matematicas/unidad-6"
+    ></div>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam eaque vel
       alias voluptates libero nam quam sapiente doloribus iure neque autem,
