--- a/html/carousel.html
+++ b/html/carousel.html
@@ -42,12 +42,12 @@
       <button
         aria-label="Ir a la anterior diapositiva"
         id="carousel-prev"
-        class="btn icon-angle-left"
+        class="btn fas fa-chevron-left"
       ></button>
       <button
         aria-label="Ir a la siguiente diapositiva"
         id="carousel-next"
-        class="btn icon-angle-right"
+        class="btn fas fa-chevron-right"
       ></button>
     </div>
   </div>
@@ -59,7 +59,6 @@
     position: relative;
     overflow: hidden;
     height: 80vh;
-    max-height: 300px;
     width: 100%;
   }
 
@@ -77,7 +76,7 @@
   }
 
   .carousel h2 {
-    color: var(--primary);
+    color: var(--text-color);
     font-size: 2rem;
   }
 
@@ -95,31 +94,9 @@
   }
 
   .carousel-buttons .btn {
-    background-color: var(--primary);
-    color: var(--black);
+    background-color: var(--bg-color);
+    color: var(--text-color);
     width: 1.8rem;
     height: 1.8rem;
   }
 </style>
-
-<script>
-  
-  import newCarousel from "./js/carousel.js";
-  setTimeout(() => {
-    document.addEventListener("DOMContentLoaded", () => {
-      newCarousel({
-        carousel: ".carousel-container .carousel",
-        nextBtn: "#carousel-next",
-        prevBtn: "#carousel-prev",
-        imagesLinks: {
-          Programacion: "./img/code.jpg",
-          Etica: "./img/la_muerte_de_socrates.jpg",
-          math: "../img/matematicas.jfif",
-        Calculo: "./img/calculo.jfif",
-        Admin: "./img/admin.jpg",
-        Inv: "./img/inv.jpg",
-      },
-    });
-  });
-}, 100);
-</script>
