Borrando etica, inv y admin

--- a/html/carousel.html
+++ b/html/carousel.html
@@ -22,19 +22,7 @@
       <div class="slide">
         <img loading="lazy" />
         <div class="abs-center flex-center">
-          <h2>Investigación</h2>
-        </div>
-      </div>
-      <div class="slide">
-        <img loading="lazy" />
-        <div class="abs-center flex-center">
-          <h2>Administración</h2>
-        </div>
-      </div>
-      <div class="slide">
-        <img loading="lazy" />
-        <div class="abs-center flex-center">
-          <h2>Ética</h2>
+          <h2 class="txt-center">JavaScript</h2>
         </div>
       </div>
     </div>
@@ -52,6 +40,17 @@
     </div>
   </div>
 </section>
+<p>Ir a la pagina principal:
+
+  <a href="index.html">Index</a>
+</p>
+<br>
+<p>Ir a alguna materia
+  <a class="block" href="../index.html#/Matematicas">Matemáticas</a>
+  <a class="block" href="../index.html#/Programacion">Programacion</a>
+  <a class="block" href="../index.html#/Calculo">Calculo</a>
+  <a class="block" href="../index.html#/JavaScript">JavaScript</a>
+</p>
 <style>
   /*------------------------ Carousel---------------------*/
 
@@ -64,7 +63,7 @@
 
   .carousel-container .carousel {
     display: flex;
-    width: 600%;
+    width: 400%;
     height: 100%;
     margin-left: -100%;
   }
